点击查看历史评论信息

--- a/​xhs_chrome_plugin/manifest.json
+++ b/​xhs_chrome_plugin/manifest.json
@@ -20,6 +20,13 @@
       "128": "images/icon128.png"
     }
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*.xiaohongshu.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
+  ],
   "background": {
     "service_worker": "background.js"
   },
