--- a/xhs_admin_ui/package.json
+++ b/xhs_admin_ui/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "xhs_admin_ui",
-  "version": "0.0.0",
+  "name": "xhs-admin-ui",
+  "version": "2.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "element-plus": "^2.9.10",
-    "pinia": "^3.0.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.2",
+    "element-plus": "^2.7.6",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.29",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2"
-  }
+    "@vitejs/plugin-vue": "^5.0.5",
+    "vite": "^5.3.1"
+  },
+  "description": "小红书评论维护系统前端管理界面 - 基于Vue3和Element Plus的现代化管理后台",
+  "keywords": [
+    "vue3",
+    "element-plus",
+    "admin",
+    "management",
+    "xiaohongshu",
+    "comment-management",
+    "domain-driven-design"
+  ]
 }
