--- a/xhs_backend/requirements.txt
+++ b/xhs_backend/requirements.txt
@@ -1,14 +1,24 @@
-fastapi
-uvicorn[standard]
-motor
-python-dotenv
-pydantic>=1.10,<2.0 # 固定 Pydantic 版本以兼容 Motor 
-bcrypt
-pyotp
-python-jose 
-jwt
-qrcode
-pillow
-psutil # 用于系统监控
-python-keycloak # Keycloak客户端
-httpx # 用于异步HTTP请求
+# 核心依赖
+fastapi>=0.95.0
+uvicorn>=0.21.1
+motor>=3.1.2
+pydantic>=1.10.7
+PyJWT>=2.6.0  # 确保使用正确的PyJWT库
+python-multipart>=0.0.6
+
+# 认证相关
+bcrypt>=4.0.1
+pyotp>=2.8.0
+qrcode>=7.4.2
+python-jose>=3.3.0  # JWT备选库
+
+# 网络请求
+httpx>=0.24.0
+aiohttp>=3.8.4
+
+# 图像处理
+Pillow>=9.5.0  # 用于QR码生成
+
+# 工具
+python-dotenv>=1.0.0
+pydantic-settings>=2.0.0
