后台功能基本正常

--- a/xhs_backend/.env.example
+++ b/xhs_backend/.env.example
@@ -20,3 +20,6 @@ KEYCLOAK_ADMIN_PASSWORD=admin
 KEYCLOAK_SSL_VERIFY=false
 KEYCLOAK_DEBUG=false
 FRONTEND_REDIRECT_URL=http://localhost:8080/web
+
+# 是否启用OTP
+AUTH_OTP_ENABLED=false
