--- a/xhs_backend/docker-compose.yml
+++ b/xhs_backend/docker-compose.yml
@@ -16,8 +16,8 @@ services:
   redis: # 新增 Redis 服务
     image: redis:alpine # 使用官方的 Redis Alpine 镜像，比较小巧
     container_name: redis_service
-    ports:
-      - "6379:6379" # 仅在需要从宿主机直接访问Redis时取消注释，通常容器间通信不需要
+    # ports:
+    #   - "6379:6379" # 仅在需要从宿主机直接访问Redis时取消注释，通常容器间通信不需要
     volumes:
       - redis_data:/data # 持久化 Redis 数据
     networks:
