--- a/xhs_plugin_v2/manifest.json
+++ b/xhs_plugin_v2/manifest.json
@@ -14,7 +14,8 @@
     "<all_urls>"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background/index.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "popup.html",
@@ -29,7 +30,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["content/index.js"],
       "run_at": "document_start"
     }
   ],
@@ -40,7 +41,15 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["injected.js", "enhanced_interceptor.js"],
+      "resources": [
+        "injected.js", 
+        "enhanced_interceptor.js",
+        "injected/index.js",
+        "injected/fetch.js",
+        "injected/xhr.js",
+        "injected/observer.js",
+        "injected/utils.js"
+    ],
       "matches": ["<all_urls>"]
     }
   ]
