帖子详情获取

--- a/xhs_plugin_v2/manifest.json
+++ b/xhs_plugin_v2/manifest.json
@@ -51,7 +51,8 @@
         "injected/api-service.js",
         "injected/dialog-manager.js",
         "injected/notification-handler.js",
-        "injected/user-notes.js"
+        "injected/user-notes.js",
+        "injected/note-detail-extractor.js"
     ],
       "matches": ["<all_urls>"]
     }
